2008-07-12  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs, Frontend-GNOME.mdp,
	  gtk-gui/Smuxi.Frontend.Gnome.QuickConnectDialog.cs,
	  gtk-gui/Smuxi.Frontend.Gnome.ConnectDialog.cs, gtk-gui/gui.stetic,
	  QuickConnectDialog.cs: Merged ConnectDialog and QuickConnectDialog for
	  sharing more code and better user experience. (closes trac bug #39)

2008-07-07  Mirco Bauer <meebey@meebey.net> 

	* Notebook.cs: Attempt to get focus faster back when switching a page, but
	  doesn't work.

2008-07-07  Mirco Bauer <meebey@meebey.net> 

	* Entry.cs: Fixed scrolling notebook tabs (closes: trac bug #11).
	
	  Fixed indention.
	
	  Supress up/down GTK+ navigation, trying to leave the entry.
	
	* Chats/ChatView.cs: Expose HasFocus and HasSelection as property.

2008-07-07  Mirco Bauer <meebey@meebey.net> 

	* Frontend-GNOME.mdp, Chats/ProtocolChatView.cs, Chats/SessionChatView.cs,
	  Chats/PersonChatView.cs, Chats/GroupChatView.cs, Chats/ChatView.cs,
	  ChatViewManager.cs: Implemented tab images.

2008-06-30  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs: Enhanced menu.
	* Preferences/ServerListView.cs: Refactored view-controlling code into own
	  methods.
	* Preferences/PreferencesDialog.cs: Expose CurrentPage property.
	* Chats/ProtocolChatView.cs: Only show a warning when closing the protocol
	  chats, if open chats exists.
	* Chats/ChatView.cs: Refactored activity / highlight code handling.
	* GnomeUI.cs: Clear highlight after having synced all messages, as it's less
	  confusing when a frontend reconnects to a running smuxi server.
	* gtk-gui/Smuxi.Frontend.Gnome.QuickConnectDialog.cs, QuickConnectDialog.cs:
	  Implemented QuickConnectDialog.
	
	* gtk-gui/Smuxi.Frontend.Gnome.ConnectDialog.cs, ConnectDialog.cs:
	  Implemented ConnectDialog.

2008-06-02  Mirco Bauer <meebey@meebey.net> 

	* Chats/ProtocolChatView.cs: Implemented closing of protocol chats.

2008-06-02  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs: Fixed whitespace.