@@ -1,3 +1,8 @@
+2008-07-14  Mirco Bauer <meebey@meebey.net> 
+
+	* Entry.cs: Fixed loosing the selection issue when bringing focus back to
+	  the input entry.
+
 2008-07-12  Mirco Bauer <meebey@meebey.net> 
 
 	* MainWindow.cs, Frontend-GNOME.mdp,
